# hobbit-wm

./: Cargo.toml  flake.nix
src/: compositor.rs  input.rs  main.rs  state.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: buffer.rs  compositor.rs  mod.rs  seat.rs  shm.rs  xdg_shell.rs
