[package]
name = "hobbit-wm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
xcursor = "0.3.10"

[dependencies.smithay]
git = "ssh://git@github.com/Smithay/smithay.git"
branch = "master"

